# skills

./: .gitignore  .gitmodules  README.md  link-skill.sh
.githooks/: pre-commit
agent-browser/: SKILL.md
frontend/webgpu-best-practices/: SKILL.md
git-pr/code-review-2axis/: SKILL.md
git-pr/commit/: SKILL.md
git-pr/my-recent-prs/: SKILL.md
git-pr/pull-request/: SKILL.md
meta/skill-creator/: SKILL.md
meta/write-a-skill/: SKILL.md
planning/grill-me/: SKILL.md
planning/orchestrate/: SKILL.md
refactor/refactor-humble-object/: SKILL.md
refactor/refactor-name/: SKILL.md
scripts/: update-skill-usage.mjs
text-visual-summary/: REFERENCE.md  SKILL.md
transcribe/transcribing-audio-locally/scripts/clovanote/: pyproject.toml
transcribe/transcribing-audio-locally/scripts/clovanote/src/clovanote_upload/: __main__.py  browser.py  cdp.py  cli.py  flow.py
transcribe/transcribing-audio-locally/scripts/clovanote/src/clovanote_upload.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
transcribe/transcribing-audio-locally/scripts/clovanote/tests/: test_browser.py  test_cli.py  test_flow.py
transcribe/transcribing-audio-locally/scripts/transcribe/: .gitignore  bench_turns.rs  pyproject.toml  setup_speakrs.sh  transcribe.py
transcribe/transcribing-audio-locally/scripts/transcribe/tests/: test_cli_args.py  test_dominant_speaker.py  test_main_orchestration.py  test_mps_fallback.py  test_parse_speakrs_turns.py  test_renderers.py  test_run_diarization.py  test_run_diarization_args.py  test_timed_step.py  test_word_level_assignment.py
(+20 files in other folders)
