[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "clovanote-upload"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["websockets>=12"]

[project.scripts]
clovanote-upload = "clovanote_upload.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = ["pytest>=8"]
